# backend/api/requests/restaurant_request.go
@@ -22,3 +22,14 @@ type InviteStaffRequest struct {
 	Email        string `json:"email" example:"" gorm:"type:varchar(255);not null"` // Email de l'utilisateur à inviter
 	RestaurantID uint   `json:"restaurant_id" example:"1" gorm:"type:int;not null"` // ID du restaurant
 }
+
+type BasketConfigurationRequest struct {
+	Price               float64                    `json:"price" example:"9.99" binding:"required,gt=0"`      // Prix du panier (obligatoire, doit être supérieur à 0)
+	VideoURL            string                     `json:"video_url" example:"https://example.com/video.mp4"` // URL facultative d'une vidéo de présentation
+	DailyAvailabilities []DailyAvailabilityRequest `json:"daily_availabilities" binding:"required,dive"`      // Configuration des disponibilités par jour (obligatoire)
+}
+
+type DailyAvailabilityRequest struct {
+	DayOfWeek       int `json:"day_of_week" example:"2" binding:"required,min=1,max=7"` // Jour de la semaine (1=Lundi, 7=Dimanche)
+	NumberOfBaskets int `json:"number_of_baskets" example:"5" binding:"required,min=0"` // Nombre de paniers disponibles ce jour
+}
